renaming the plugin to grunt-symbolic-link
- rename to avoid the "contrib" reserved naming scheme

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.2.0:
+  date: 2013-02-17
+  changes:
+    - rename to avoid reserved "contrib" naming scheme
 v0.1.0:
   date: 2012-12-20
   changes:
